# sigsleep

./: .pre-commit-config.yaml  README.md  pyproject.toml
sigsleep/: __init__.py  sigsleep.py
