[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sigsleep"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
license = {text = "GPL"}
description = "Sleep that prints info upon receiving a specified signal"
urls = {Homepage = "https://github.com/zwimer/sigsleep"}
requires-python = ">= 3.8"
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
sigsleep = "sigsleep:cli"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
sigsleep = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "sigsleep._version.__version__"}

# Tools

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
ignore=["E731"]
line-length = 120
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.vulture]
ignore_names = ["cli"]
min_confidence = 70
paths = ["sigsleep"]
